--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@ Version3/Results
 Version4/Plots
 Version4/Results
 Version4/__pycache__
-Version4/.ipynb_checkpoints
+Version4/.ipynb_checkpoints/Plots-checkpoint.ipynb
 Version3/__pycache__
 Version3/.ipynb_checkpoints
 Version2/__pycache__
 Version2/.ipynb_checkpoints
+
