Added all ipynb checkpoints to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ Version3/Results
 Version4/Plots
 Version4/Results
 Version4/__pycache__
-Version4/.ipynb_checkpoints/Plots-checkpoint.ipynb
+Version4/.ipynb_checkpoints
 Version3/__pycache__
 Version3/.ipynb_checkpoints
 Version2/__pycache__
